# dhaka-house-rent-predictor

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  benchmarks.md  c_implementation_requirements.txt  config.py  modified_preprocessing.py  paper.md  performance_metrics_functions.py  portfolio.md  pyproject.toml  readme.md  run.py  scoreboard.md  speedtest.md
app/: helper.py  predict_rent.py  serve.py  train.py  types.py
app/handler/data/: download.py  load.py  preprocess.py
app/handler/web/: http.py  server.py
app/model/: linear_regression.py  predict.py  train.py
app/ui/: index.html
benchmarks/: steps.md
benchmarks/docs/: results_analysis.md  scoreboard.md  speedtest.md
benchmarks/scripts/: 01_benchmark_script.py  01_create_bar_plot.py  02_benchmark_script.py  02_create_bar_plot.py  __common.py  metrics_func.py
benchmarks/scripts/performance_comparison/: steps.md
benchmarks/scripts/performance_comparison/results/: 01_benchmark_results.md  02_benchmark_results.md
benchmarks/scripts/performance_comparison/scripts/: 01_benchmark_script.py  01_create_bar_plot.py  02_benchmark_script.py  02_create_bar_plot.py  __common.py
benchmarks/scripts/scoreboard_scripts/: 01_generate_scoreboard.py  02_generate_scoreboard.py  _scoreboard_func.py
benchmarks/scripts/speedtest_scripts/: 03_stress_test.py  04_plot_py_impl.py  05_plot_c_impl_with_factors.py  06_plot_c_pthread_with_factors.py  _shared_func.py
c_impl/: __init__.pyi  linear_regression_model.c  linear_regression_model.h  matrix_ops.c  python_wrapper.c  setup.py
c_implementations/c_impl/: c_impl-1.0-cp313-cp313-linux_x86_64.whl  matrix_ops.c  pyproject.toml  python_wrapper.c
c_implementations/c_pthread/: c_pthread-1.0-cp313-cp313-linux_x86_64.whl  matrix_ops_pthread.h  pyproject.toml  python_wrapper.c
c_pthread/: __init__.pyi  linear_regression_model.c  matrix_ops_pthread.c  python_wrapper.c  setup.py
model_impls/c_impl/: __init__.pyi  matrix_ops.c  matrix_ops.h  pyproject.toml  python_wrapper.c
model_impls/c_pthread/: linear_regression_model.c  matrix_ops_pthread.c  matrix_ops_pthread.h  pyproject.toml  python_wrapper.c
model_impls/py_impl/: __init__.py  linear_regression.py  matrix_calculation.py  pyproject.toml
scoreboard_scripts/: 01_generate_scoreboard.py  _scoreboard_func.py
speedtest_scripts/: 01_small_datasets.py  02_speedtest_with_modified_preprocessing.py  03_stress_speed_test.py  03_stress_test.py  04_plot_py_impl.py  04_plot_speedtest_graph.py  05_plot_c_impl_with_factors.py  06_plot_c_pthread_with_factors.py  _shared_func.py
tests/: test_c_impl.py  test_c_pthread.py  test_linear_regression.py  test_matrix_calculations.py  test_performance_matrics.py  test_performance_metrics.py  test_py_impl.py
