[project]
name = "c_pthread"
version = "1.0"
description = "C implementation of linear regression model with pthreads"
requires-python = ">=3.12"
dependencies = []

[[project.authors]]
name = "Rakibul Hasan Ratul"
email = "rakibulhasanratul@proton.me"

[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["c_pthread"]
include-package-data = true

[tool.setuptools.package-dir]
"c_pthread" = "."

[tool.setuptools.package-data]
"c_pthread" = ["*.pyi"]

[[tool.setuptools.ext-modules]]
name = "c_pthread"
sources = [
    "python_wrapper.c",
    "linear_regression_model.c",
    "matrix_ops_pthread.c"
]
include-dirs = ["."]
extra-compile-args = [
    "-O3",
    "-march=native",
    "-flto",
    "-ffast-math",
    "-fomit-frame-pointer",
    "-funroll-loops",
    "-fno-strict-aliasing",
    "-mavx2",
    "-mfma",
    "-ftree-vectorize",
    "-fdata-sections",
    "-ffunction-sections",
    "-pthread",
]
extra-link-args = ["-flto", "-s", "-Wl,--gc-sections", "-pthread"]